# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "minirust"
version = "0.3.0"
edition = "2021"

[profile.release-optimized]
inherits = "release"
lto = "fat"
strip = "symbols"

[dependencies]
handlebars = "4.2.2"
lettre = { version = "0.10.0-rc.5", features = ["rustls-tls"] }
openssl = { version = "0.10.38", features = ["vendored"] }
which = "4.2.5"
